--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,29 @@
 body{
     background-color: salmon;
 }
-[name="search"]{
-    background-color: red;
+table{
+    border-collapse: collapse;
 }
+table td,
+table th{
+    border: 1px solid gray;
+
+    padding: .5rem;
+}
+/* [name="search"]{
+    background-color: red;
+} */
+/* tbody tr td::before {
+    content: attr(data-title);
+} 
+tbody tr td::before {
+		display: inline-block;
+		width: 25%;
+		min-width: 100px;
+		border-right: 2px dotted #999;
+		margin-right: 10px;
+		font-weight: bold;
+		
+}	
+    
+*/
